For the country guessing game I added a world.js , world.html and modified the index.html to accept my world.html page and modified some of the Css file

--- a/files/css/style.css
+++ b/files/css/style.css
@@ -38,3 +38,10 @@ input {
     width: 250px;
     text-align: center;
 }
+
+#photo_container { 
+  margin-top: 20px;  
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
