--- a/files/css/style-football.css
+++ b/files/css/style-football.css
@@ -4,10 +4,17 @@ html {
 }
 
 body {
-    /*background: url(stadium.jpg) no-repeat center center;*/
+    background: url(stadium.jpg) no-repeat center center;
+    background-attachment: fixed;
     min-height: 100%;
     min-width: 100%;
     background-size: cover;
+}
+
+.panel {
+    width: 50%;
+    margin: 20px auto;
+    opacity: 0.9;
 }
 
 .navbar-default {
@@ -16,6 +23,11 @@ body {
     padding: 20px 0px;
     margin-bottom: 0px;
     margin-top: 0px;
+    color: white;
+}
+
+input {
+    background: transparent;
 }
 
 #logo {
@@ -31,8 +43,26 @@ body {
   float:none;
 }
 
+h1 {
+    color: white;
+    text-shadow: 1px 1px black;
+}
+
 h3 {
     font-weight: normal;
+    color: white;
+    text-shadow: 1px 1px black;
+}
+
+h4 {
+    font-style: italic;
+    font-size: 22px;
+}
+
+h5 {
+    font-weight: bold;
+    margin-top: 10px;
+    margin-bottom: 0;
 }
 
 input {
