--- a/files/css/style-football.css
+++ b/files/css/style-football.css
@@ -9,6 +9,7 @@ body {
     min-height: 100%;
     min-width: 100%;
     background-size: cover;
+    font-family: 'Poppins', sans-serif;
 }
 
 .panel {
@@ -39,6 +40,10 @@ input {
     margin-top: 50px;
 }
 
+#gaming {
+    display: none;
+}
+
 .center-block {
   float:none;
 }
@@ -55,14 +60,13 @@ h3 {
 }
 
 h4 {
-    font-style: italic;
     font-size: 22px;
 }
 
 h5 {
     font-weight: bold;
-    margin-top: 10px;
-    margin-bottom: 0;
+    margin-top: 12px;
+    margin-bottom: 2px;
 }
 
 input {
