--- a/files/css/style.css
+++ b/files/css/style.css
@@ -36,6 +36,7 @@ html {
 
 body {
     background: url("http://www.wallpaperup.com/uploads/wallpapers/2014/03/18/301966/big_thumb_50c2239a88b5336315269c0ac72a8e46.jpg") no-repeat center center;
+    background-attachment: fixed;
     min-height: 100%;
     min-width: 100%;
     background-size: cover;
