--- a/files/css/style-football.css
+++ b/files/css/style-football.css
@@ -28,6 +28,10 @@ body {
     color: white;
 }
 
+#navbar-title {
+    color: white;
+}
+
 input {
     background: transparent;
 }
@@ -50,6 +54,10 @@ input {
 }
 
 h1 {
+    text-transform: uppercase;
+    font-size: 50px;
+    font-weight: bold;
+    font-family: 'News Cycle', sans-serif;
     color: white;
     text-shadow: 1px 1px black;
 }
@@ -65,6 +73,9 @@ h4 {
 }
 
 h5 {
+    text-transform: uppercase;
+    font-family: 'News Cycle', sans-serif;
+    font-size: 18px;
     font-weight: bold;
     margin-top: 12px;
     margin-bottom: 2px;
